--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-feather": "^2.0.10",
     "resend": "^3.0.0",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
