--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "18.2.0",
     "react-feather": "^2.0.10",
     "resend": "^3.0.0",
+    "sonner": "^1.3.1",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
   }
